--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-    "$schema": "https://json.schemastore.org/package.json",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "build:ssr": "vite build && vite build --ssr",
-        "dev": "vite",
-        "format": "prettier --write resources/",
-        "format:check": "prettier --check resources/",
-        "lint": "eslint . --fix",
-        "types": "tsc --noEmit"
-    },
-    "devDependencies": {
-        "@sveltejs/vite-plugin-svelte": "^6.2.1",
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.7"
-    },
-    "dependencies": {
-        "@inertiajs/svelte": "^2.2.8",
-        "svelte": "5.0.0-next.272"
-    }
+	"$schema": "https://json.schemastore.org/package.json",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "vite build",
+		"build:ssr": "vite build && vite build --ssr",
+		"dev": "vite",
+		"format": "prettier --write resources/",
+		"format:check": "prettier --check resources/",
+		"lint": "eslint . --fix",
+		"types": "tsc --noEmit"
+	},
+	"devDependencies": {
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/vite": "^4.0.0",
+		"axios": "^1.11.0",
+		"concurrently": "^9.0.1",
+		"laravel-vite-plugin": "^2.0.0",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"tailwindcss": "^4.0.0",
+		"vite": "^7.0.7"
+	},
+	"dependencies": {
+		"@inertiajs/svelte": "^2.2.8",
+		"svelte": "5.0.0-next.272"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
+	}
 }
