--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
 	},
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"@tailwindcss/vite": "^4.0.0",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.18",
+		"@tailwindcss/vite": "^4.1.13",
 		"axios": "^1.11.0",
 		"concurrently": "^9.0.1",
 		"laravel-vite-plugin": "^2.0.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
-		"tailwindcss": "^4.0.0",
+		"prettier-plugin-tailwindcss": "^0.6.14",
+		"tailwindcss": "^4.1.13",
 		"vite": "^7.0.7"
 	},
 	"dependencies": {
@@ -28,7 +31,8 @@
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
-			"esbuild"
+			"esbuild",
+			"@tailwindcss/oxide"
 		]
 	}
 }
