--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.18",
 		"@tailwindcss/vite": "^4.1.13",
+		"@tsconfig/svelte": "^5.0.5",
 		"axios": "^1.11.0",
 		"concurrently": "^9.0.1",
 		"laravel-vite-plugin": "^2.0.0",
