feat: storyboards and wireframes
Signed-off-by: João Augusto Costa Branco Marado Torres <torres.dev@disroot.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,18 +9,23 @@
     "noImplicitAny": true,
     "baseUrl": ".",
 
-        "allowUnreachableCode": false,
-        "allowUnusedLabels": false,
-        "exactOptionalPropertyTypes": true,
-        "noImplicitOverride": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noPropertyAccessFromIndexSignature": true,
-        "noUncheckedIndexedAccess": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
 
-        "checkJs": true
+    "checkJs": true,
+
+    "paths": {
+      "$lib": ["./resources/js/"],
+      "$lib/*": ["./resources/js/*"]
+    }
   },
   "include": [
     "resources/js/**/*.ts",
