--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "type": "git",
         "url": "git+https://github.com/torres-engineer/SeUnem.git"
     },
-	"type": "module",
+    "type": "module",
     "scripts": {
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
@@ -30,6 +30,8 @@
     "devDependencies": {
         "@eslint/compat": "^1.4.0",
         "@eslint/js": "^9.36.0",
+        "@internationalized/date": "^3.8.1",
+        "@lucide/svelte": "^0.544.0",
         "@sveltejs/vite-plugin-svelte": "^6.2.1",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.18",
@@ -37,6 +39,7 @@
         "@tsconfig/svelte": "^5.0.5",
         "@types/node": "^22",
         "axios": "^1.11.0",
+        "bits-ui": "^2.11.0",
         "concurrently": "^9.0.1",
         "eslint": "^9.36.0",
         "eslint-config-prettier": "^10.1.8",
@@ -46,14 +49,19 @@
         "prettier": "^3.6.2",
         "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
+        "tailwind-variants": "^3.1.1",
         "tailwindcss": "^4.1.13",
+        "tw-animate-css": "^1.4.0",
         "typescript": "^5.9.3",
         "typescript-eslint": "^8.44.1",
         "vite": "^7.0.7"
     },
     "dependencies": {
         "@inertiajs/svelte": "^2.2.8",
-        "svelte": "5.0.0-next.272"
+        "clsx": "^2.1.1",
+        "mode-watcher": "^1.1.0",
+        "svelte": "5.41.1",
+        "tailwind-merge": "^3.3.1"
     },
     "pnpm": {
         "onlyBuiltDependencies": [
